--- a/main.css
+++ b/main.css
@@ -51,6 +51,13 @@ body{
     padding: 5px 24px;
     background-color: var(--white-color);
 }
+.nav-bar>.logo>.logo-name{
+    color: var(--accent-color);
+    text-transform: capitalize;
+}
+.nav-bar>.logo>.logo-name::first-letter{
+    color: var(--main-color);
+}
 .nav-bar>.drop-toggle{
     font-size: 24px;
     color: var(--font-color);
@@ -134,11 +141,14 @@ body{
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: 1fr;
     max-width: 1200px;
+    position: relative;
+    overflow: hidden;
 }
 .home-content>.welcome{
     position: relative;
     padding: 5px 0px;
     overflow: hidden;
+    z-index: 2;
 }
 .home-content>.welcome::before{
     content: "";
@@ -177,6 +187,146 @@ body{
     to{
         transform: rotate(360deg);
     }
+}
+.home-content>.img{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    background-color: var(--background-color);
+    justify-items: center;
+    align-items: center;
+}
+/* ------------------------------------ */
+.three-lines {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background-color: var(--accent-color);
+}
+
+.three-lines::before,
+.three-lines::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    left: 0px;
+}
+
+.three-lines::after {
+    top: calc(100% + 20px);
+    background-color: var(--main-color);
+}
+
+.three-lines::before {
+    top: calc(-100% - 20px);
+    background-color: var(--font-color);
+}
+
+.three-rectangle,
+.three-circle {
+    width: calc(100% - 15px);
+    height: calc(100% - 15px);
+    border: 10px solid var(--accent-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.three-rectangle::after,
+.three-circle::after {
+    content: "";
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    border: 10px solid var(--main-color);
+    position: absolute;
+}
+
+.three-rectangle::before,
+.three-circle::before {
+    content: "";
+    width: calc(100% - 80px);
+    height: calc(100% - 80px);
+    border: 10px solid var(--font-color);
+    position: absolute;
+}
+
+.three-circle {
+    border-color: var(--main-color);
+    border-radius: 50%;
+}
+
+.three-circle::after {
+    border-color: var(--font-color);
+    border-radius: 50%;
+}
+
+.three-circle::before {
+    border-color: var(--accent-color);
+    border-radius: 50%;
+}
+
+.triangle-up-down-in {
+    width: 90%;
+    height: 90%;
+    border: 90px solid transparent;
+    border-left-color: var(--accent-color);
+    border-right-color: var(--font-color);
+}
+
+.triangle-up-down-out {
+    width: 90%;
+    height: 90%;
+    position: relative;
+}
+
+.triangle-up-down-out::before,
+.triangle-up-down-out::after {
+    content: "";
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border: 80px solid transparent;
+}
+
+.triangle-up-down-out::after {
+    border-top-color: var(--main-color);
+    top: calc(50% + 5px);
+}
+
+.triangle-up-down-out::before {
+    border-bottom-color: var(--font-color);
+    top: calc(-50% + 5px);
+}
+
+.three-skew-lines {
+    width: 60%;
+    height: 40px;
+    position: relative;
+    background-color: var(--font-color);
+}
+
+.three-skew-lines::before,
+.three-skew-lines::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.three-skew-lines::after {
+    top: calc(100% + 10px);
+    left: -15px;
+    background-color: var(--accent-color);
+    transform: skewX(-35deg);
+}
+
+.three-skew-lines::before {
+    top: calc(-100% - 10px);
+    background-color: var(--main-color);
+    transform: skewX(-35deg);
+    left: 15px;
 }
 #about{
     background-color: var(--font-color);
@@ -417,6 +567,7 @@ body{
 }
 .skills-content>.skill>.skill-name{
   text-transform: uppercase;
+  font-size: 16px;
 }
 .skills-content>.skill>.skill-progres{
   --width:50%;
@@ -519,6 +670,127 @@ body{
 .featchers-content>.featchers-list>.featcher>.check{
   color: var(--main-color);
 }
+#contact{
+    position: relative;
+    overflow: hidden;
+    align-items: flex-start;
+}
+#contact::after{
+    content: "";
+    position: absolute;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 100%;
+    top: -50%;
+    left: -50%;
+    border-radius: 50%;
+}
+#contact::before {
+    content: "";
+    position: absolute;
+    background-color: var(--main-color);
+    width: 100%;
+    height: 100%;
+    bottom: -50%;
+    right: -50%;
+    border-radius: 50%;
+}
+.contact-me{
+    display: grid;
+    grid-template-columns: 1fr;
+    position: relative;
+    justify-items: center;
+    z-index: 2;
+    width: 500px;
+}
+.contact-me>.section-name{
+    padding: 30px;
+}
+.contact-me>.contact-form{
+    padding: 30px;
+    width: 100%;
+    background-color: var(--white-color);
+    box-shadow: 0px 0px 12px 2px var(--shadow-color);
+    position: relative;
+    overflow: hidden;
+}
+.contact-me>.contact-form::before {
+    content: "";
+    height: 180%;
+    width: 30%;
+    position: absolute;
+    background-color: var(--accent-color);
+    left: calc(50% + 10px);
+    transform: rotate(38deg);
+    transform-origin: center left;
+}
+.contact-me>.contact-form::after {
+    content: "";
+    height: 180%;
+    width: 30%;
+    position: absolute;
+    background-color: var(--main-color);
+    right: calc(50% + 10px);
+    transform: rotate(38deg);
+    transform-origin: center right;
+}
+.contact-me>.contact-form>.form {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+    background-color: var(--background-color);
+    width: 100%;
+    padding: 20px;
+    position: relative;
+    z-index: 2;
+}
+.contact-me>.contact-form>.form>.email-input,
+.contact-me>.contact-form>.form>.subject-input{
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 5px;
+}
+.contact-me>.contact-form>.form label{
+    color: var(--font-color);
+    font-weight: bold;
+}
+.contact-me>.contact-form>.form input {
+    padding: 5px;
+}
+.contact-me>.contact-form>.form textarea {
+    padding: 5px;
+    resize: none;
+    height: 150px;
+}
+.contact-me>.contact-form>.form>.send {
+    padding: 10px;
+    font-size: 18px;
+    text-transform: capitalize;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    border: none;
+}
+.contact-me>.contact-form>.form>.send:hover{
+    background-color: var(--light-accent-color);
+    cursor: pointer;
+}
+.footer{
+    position: absolute;
+    z-index: 3;
+    bottom: 0px;
+    width: 100%;
+    background-color: var(--font-color);
+    padding: 20px;
+    color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: capitalize;
+}
+.footer>.sociel>i{
+    margin: 5px;
+    font-size: 18px;
+}
 /* ******************************small devices**************************************** */
 
 @media screen and (max-width:992px) {
@@ -559,6 +831,14 @@ body{
     .nav-bar>.drop-down>.hire-me{
         width: 100%;
     }
+    .home-content {
+        place-content: center;
+        grid-template-columns: 1fr;
+        max-width: 100%;
+    }
+    .home-content>.img {
+        position: absolute;
+    }
     .featchers-content {
         display: grid;
         grid-template-columns: 1fr;
@@ -579,10 +859,5 @@ body{
 /* ******************************small devices**************************************** */
 
 @media screen and (max-width:768px) {
-    .home-content {
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: 1fr 1fr;
-        max-height: 100%;
-        align-self: flex-start;
-    }
+
 }
