--- a/main.css
+++ b/main.css
@@ -127,6 +127,7 @@ body{
 .content>section{
     width: 100%;
     height: 100%;
+    min-height: fit-content;
     scroll-snap-align: start;
     scroll-snap-stop: always ;
 }
